# imdb_scraper

./: .flake8  .gitignore  LICENSE  README.md  blacklist.txt  movie_data.txt  pyproject.toml
StaticDB/: test_movies.pickle
StaticDB/.ipynb_checkpoints/: GetJson_v2-checkpoint.ipynb
imdb_scraper/: merge.py  scraper.py
merged_scraped_data/: blacklist.txt  movie_data.txt  tmdb_data_10000.json  tmdb_data_large.json
ml_models/: main.py  metrics.py  model_base.py  utils.py
ml_src/: main.ipynb  main.py  metrics.py  model_runner.py  predict.py  train.py  utils.py
models/: .gitignore  LinReg_budget_isCollection.pickle  val_score_71noextras_datalen_16154_RandomForestRegressor_12_06_2021__16_58.pickle
tmdb_scraper/: scraper.py
