[tool.poetry]
name = "imdb_scraper"
version = "0.1.0"
description = "Scrapes movies from IMDb"
authors = ["Jared Dobry <jareddobry10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
IMDbPY = "^2021.4.18"
wheel = "^0.37.0"
black = "^21.10b0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
scrape = "imdb_scraper.scraper:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
