[tool.poetry]
name = "imdb_scraper"
version = "0.1.0"
description = "Scrapes movies from IMDb"
authors = ["Jared Dobry <jareddobry10@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
IMDbPY = "^2021.4.18"
wheel = "^0.37.0"
black = {extras = ["jupyter"], version = "^21.11b1"}
flake8 = "^4.0.1"
tmdbsimple = "^2.8.0"
numpy = "^1.21.4"
pandas = "^1.3.4"
sklearn = "^0.0"
lime = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
scrape_imdb = "imdb_scraper.scraper:main"
scrape_tmdb = "tmdb_scraper.scraper:main"
merge = "imdb_scraper.merge:merge"
train = "ml_src.main:train_model"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
